<resources>
    <string name="app_name">FoodLess</string>
<<<<<<< HEAD
=======
    <string name="app_name">FoodLess</string>
>>>>>>> Intan
    <string name="register">REGISTER</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email"> Email</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="restaurant_name"> Restaurant Name</string>
    <string name="contact_person"> Contact Person Name</string>
    <string name="choose_regis">Choose <b>One</b></string>
    <string name="login">Login</string>
    <string name="text_register">Dont have an account? Register <u> here</u> </string>
<<<<<<< HEAD
    <string name="nama">Nama Restoran</string>
    <string name="kelamin">Kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="hobi">Hobi</string>
    <string name="browsing">Browsing</string>
    <string name="coding">Coding</string>
    <string name="membaca">Membaca</string>
    <string name="renang">Renang</string>
    <string name="daftar">Daftar Donasi</string>
    <string name="action_settings">Settings</string>
    <string name="alamat">Alamat</string>
    <string name="telepon">Telepon</string>
    <string name="jenismakanan">Jenis Makanan</string>
    <string name="tanggalKadaluarsa">Tanggal Kadaluarsa</string>
=======

>>>>>>> Intan

</resources>
