<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10sp"
    android:layout_marginTop="10sp"
    android:layout_marginRight="10sp"
    android:background="@color/bgcolor">

    <TextView
        android:id="@+id/textNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittextNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textAlamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alamat"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittextAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textTelepon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telepon"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittextTelepon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="" >

        <requestFocus />
    </EditText>


    <TextView
        android:id="@+id/textJenisMakanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenismakanan"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittextJenisMakanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Ex: Makananan Jadi, Makanan Sayur" >

        <requestFocus />
    </EditText>


    <TextView
        android:id="@+id/textTanggalKadaluarsa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tanggalKadaluarsa"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/daftar"
        android:background="@drawable/btn_rounded"/>

</LinearLayout>