<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graylight"
    tools:context=".userProfile">

    <ImageView
        android:id="@+id/bgAtas"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/gradientbackground"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        app:layout_constraintTop_toTopOf="@id/bgAtas"
        app:layout_constraintBottom_toBottomOf="@id/bgAtas"
        app:layout_constraintStart_toStartOf="@id/bgAtas"
        app:layout_constraintEnd_toEndOf="@id/bgAtas"
        android:id="@+id/imgProfPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="76dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtFullName"
        app:layout_constraintTop_toBottomOf="@id/imgProfPic"
        app:layout_constraintBottom_toBottomOf="@id/bgAtas"
        app:layout_constraintStart_toStartOf="@id/bgAtas"
        app:layout_constraintEnd_toEndOf="@id/bgAtas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="20sp"
        android:textColor="@color/putih"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imgEmail"
        app:layout_constraintTop_toBottomOf="@id/bgAtas"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="36dp"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/ic_email"
        />

    <TextView
        android:id="@+id/txtEmail"
        app:layout_constraintStart_toEndOf="@id/imgEmail"
        app:layout_constraintTop_toBottomOf="@id/bgAtas"
        app:layout_constraintBottom_toBottomOf="@id/imgEmail"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/email"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <ImageView
        android:id="@+id/imgPassword"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgEmail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="36dp"
        />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/imgPassword"
        app:layout_constraintTop_toBottomOf="@id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imgPassword"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <ImageView
        android:id="@+id/imgPhone"
        app:layout_constraintTop_toBottomOf="@id/imgPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_phone"
        />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/phone_number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@id/imgPhone"
        app:layout_constraintTop_toBottomOf="@id/txtPassword"
        app:layout_constraintBottom_toBottomOf="@id/imgPhone"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/imgAddress"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_address"
        app:layout_constraintTop_toBottomOf="@id/imgPhone"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="36dp"
        />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toEndOf="@+id/imgAddress"
        tools:layout_editor_absoluteY="571dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone"
        app:layout_constraintBottom_toBottomOf="@id/imgAddress"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        />

</android.support.constraint.ConstraintLayout>