<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/bgcolor">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/hijau"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:src="@drawable/icon_register" />

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/register"
            android:textColor="@color/putih"
            android:textSize="22sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"
        android:rotation="45"
        android:src="@drawable/square" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:padding="8dp"
                    android:src="@drawable/icon_profile" />

                <EditText
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:id="@+id/edit_nama_regis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/full_name"
                    android:singleLine="true"
                    android:textSize="12sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_address" />

                <EditText
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:id="@+id/edit_address_regis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:singleLine="false"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_phone" />

                <EditText
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:id="@+id/edit_notelp_regis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_email" />

                <EditText
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:id="@+id/edit_email_regis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_password" />

                <EditText
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:id="@+id/edit_password_regis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/password"
                    android:password="true"
                    android:singleLine="true"
                    android:textSize="12sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_register_individu"
                android:layout_marginTop="16dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/background_button_hijau"
                android:text="@string/register"
                android:textColor="@color/putih"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sign_in"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />

            <ProgressBar
                android:id="@+id/progress_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>